<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Blue">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/back"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/white_arrow"
                android:contentDescription="@string/back"
                android:layout_marginHorizontal="10dp"
                />

        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_demo_21l_7521"
            android:fontFamily="serif"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginHorizontal="15dp"

            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Blue">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="15sp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/Blue"
            app:icon="@drawable/ic_heart"
            app:cornerRadius="0dp"
            android:id="@+id/btn1"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="15sp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/Clicked"
            app:icon="@drawable/ic_heart"
            app:cornerRadius="0dp"
            android:id="@+id/btn2"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:layout_marginTop="0dp"
            android:textSize="15sp"
            android:backgroundTint="@color/Blue"
            app:icon="@drawable/ic_heart"
            app:cornerRadius="0dp"
            android:id="@+id/btn3"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_screen_1"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginVertical="100dp"
        android:visibility="gone"
        android:id="@+id/tvs1"
        /><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_screen_2"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginVertical="100dp"
        android:visibility="gone"
        android:id="@+id/tvs2"
        /><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_screen_3"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginVertical="100dp"
        android:visibility="gone"
        android:id="@+id/tvs3"
        />

</LinearLayout>
