<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"

        android:layout_marginHorizontal="50pt"
        android:layout_marginVertical="20pt"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"


            />
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"

            />
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_mail_address"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"

            />
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"

            />
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"


            />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|left"
        android:layout_marginHorizontal="35dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/male"
            android:textColor="@color/black"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/female"
            android:textColor="@color/black"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:layout_marginLeft="5dp"
            android:id="@+id/btn1"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:id="@+id/btn2"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Login Now"
            android:textSize="17sp"
            android:textColor="@color/Link_Blue"/>


    </LinearLayout>

    </LinearLayout>


