<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:background="@drawable/border_bottom">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/settingsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:contentDescription="@string/settings_symbol"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/dp_insta"
                android:contentDescription="@string/dp"
                android:scaleType="centerCrop"
                />


        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="12dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Posts"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:layout_gravity="center"
                        android:textSize="15sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Followers"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:layout_gravity="center"
                        android:textSize="15sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Following"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:layout_gravity="center"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:gravity="center"
                android:background="@color/Grey"
                android:layout_marginTop="20dp"
                />


        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_bio_goes_here"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/and_here_too"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoursite_com"
        android:textSize="20sp"
        android:textColor="@color/Link_Blue"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_options"
            android:gravity="center"
            android:padding="8dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_options"
            android:gravity="center"
            android:padding="8dp"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_options"
            android:gravity="center"
            android:padding="8dp"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_options"
            android:gravity="center"
            android:padding="8dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:src="@drawable/pic_one"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:src="@drawable/pic_one" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:src="@drawable/pic_one"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginVertical="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:src="@drawable/pic_one"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:src="@drawable/pic_one" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:src="@drawable/pic_one"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_weight="1"
            android:padding="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_weight="1"
            android:padding="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_weight="1"
            android:padding="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_weight="1"
            android:padding="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_weight="1"
            android:padding="8dp"/>


    </LinearLayout>

</LinearLayout>